syntax = "proto3";

package pbfile;

service SearchUser{
  rpc Search(SearchRequest) returns (SearchResult){}
}

message SearchRequest{
  string condition = 1;
  map<string, SearchResult> person_num = 2;
}

message SearchResult{
  string userinfo = 1;
}
